add angular first atemp

--- a/app/index.html
+++ b/app/index.html
@@ -139,6 +139,7 @@
 <script src="scripts/controllers/dbConfig.js"></script>
 <script src="scripts/controllers/packet.js"></script>
 <script src="scripts/services/configService.js"></script>
+<script src="scripts/services/packetService.js"></script>
 <!-- endbuild -->
 </body>
 </html>
