add new view instead of modal

--- a/app/index.html
+++ b/app/index.html
@@ -45,14 +45,15 @@
 
                 <ul class="nav navbar-nav">
                     <li class="active ">
-                        <a href="#/" data-toggle="modal" data-target="#dbConfig"
-                           class="fa fa-2x fa-database"></a>
+                        <a href="#/" class="fa fa-2x fa-home"></a>
                     </li>
                     <li class="active ">
-                        <a href="#/" data-toggle="modal" data-target="#sendPacket"
-                           class="fa fa-2x fa-paper-plane"></a>
+                        <a href="#/sendPacket" class="fa fa-2x fa-paper-plane"></a>
                     </li>
-                    <li><a ng-href="#/">Contact</a></li>
+                    <li class="active ">
+                        <a href="#/dbConfig" data-toggle="modal" data-target="#dbConfig"
+                           class="fa fa-2x fa-database"></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -69,56 +70,6 @@
     </div>
 </div>
 
-<!--Send Packet Modal-->
-<div class="modal fade" id="sendPacket" tabindex="-1" role="dialog" aria-labelledby="sendPacketLbl">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title " id="sendPacketLbl"><span class="fa fa-1x fa-paper-plane">  Send Packet</span>
-                </h4>
-            </div>
-
-            <div class="modal-body" ng-controller="SendPacketCtrl as sendPacket">
-
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label for="packetType">Type</label>
-                        <select name="type" id="packetType">
-                            <option value="data">DATA</option>
-                            <option value="openPath">OPEN_PATH</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="srcAdd">Source Address:</label>
-                        <input type="text" id="srcAdd" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="dstAdd">Destination Address:</label>
-                        <input type="text" id="dstAdd" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="ctrlIpFrom">From:</label>
-                        <select class="form-control" id="ctrlIpFrom" ng-repeat="ctrl in sendPacket.controllers">
-                            <option>{{ctrl.ip}}</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="ctrlIpTo">To:</label>
-                        <select class="form-control" id="ctrlIpTo" ng-repeat="ctrl in sendPacket.controllers">
-                            <option>{{ctrl.ip}}</option>
-                        </select>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Send</button>
-            </div>
-        </div>
-    </div>
-</div>
 <!--Modal: Database Config-->
 <div class="modal fade" id="dbConfig" tabindex="-1" role="dialog" aria-labelledby="dbConfigLbl">
     <div class="modal-dialog" role="document">
