add aseman module and packet provider

--- a/app/index.html
+++ b/app/index.html
@@ -141,6 +141,9 @@
 <script src="https://cdn.rawgit.com/angular-ui/bower-ui-grid/master/ui-grid.min.js"></script>
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
+<script src="scripts/aseman/asemanModule.js"></script>
+<script src="scripts/aseman/packet/packet.js"></script>
+<script src="scripts/aseman/packet/packetProvider.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/dbConfig.js"></script>
 <script src="scripts/controllers/packet.js"></script>
