--- a/app/index.html
+++ b/app/index.html
@@ -150,7 +150,9 @@
 <script src="scripts/controllers/sendPacket.js"></script>
 <script src="scripts/services/configService.js"></script>
 <script src="scripts/services/packetService.js"></script>
+<script src="scripts/services/packetQueryService.js"></script>
 <script src="scripts/services/controllerService.js"></script>
+<script src="scripts/values/values.js"></script>
 <!-- endbuild -->
 </body>
 </html>
